registering the Scale param on the InvX powder pattern background as a parameter